# trading-dashboard-v1

./: .env.example  .gitignore  AAPL__1d.csv  AAPL__2h.csv  ADBE__1d.csv  ADBE__2h.csv  ADI__1d.csv  ADI__2h.csv  ADP__1d.csv  ADP__2h.csv  AMAT__1d.csv  AMAT__2h.csv  AMD__1d.csv  AMD__2h.csv  AMGN__1d.csv  AMGN__2h.csv  AMZN__1d.csv  AMZN__2h.csv  ARKK__1d.csv  ARKK__2h.csv  ARM__1d.csv  ASML__1d.csv  ASML__2h.csv  AVGO__1d.csv  AVGO__2h.csv  AZN__1d.csv  AZN__2h.csv  BITO__1d.csv  BITO__2h.csv  BKNG__1d.csv  BKNG__2h.csv  CDNS__1d.csv  CDNS__2h.csv  CEG__1d.csv  CEG__2h.csv  CMCSA__1d.csv  CMCSA__2h.csv  COIN__1d.csv  COIN__2h.csv  CONTEXT.md  (+117 more)
frontend/: .gitignore  index.html  package-lock.json  package.json  preview.html  tailwind.config.js  tsconfig.node.json
scripts/: apex_4h_backtest.py  apex_options_backtest.py  backtest_free_range.py  backtest_rsp_spy_5d_slope.py  backtest_strategies.py  bb_kc_strategy_backtest.py  beat_market_monitor.py  check_capex_prints.py  explore_historical_sqn.py  explore_sqn_spread.py  index_swing_monitor.py  lotto_cloud_scan.py  lotto_signal_history.py  lotto_universe_review.py  measure_lotto_signal_rate.py  notify_telegram.py  publish_results.py  qqqm_core_backtest.py  regime_levered_trend_backtest.py  shadow_open_bar.py  sleep_until_pt.py  sqz_prob_options_backtest.py  stage_market_data.py  stoch_oversold_backtest.py  stoch_oversold_sqn_conditioned.py  stoch_oversold_stop_sim.py  yf_burst_probe.py
src/: broker_accounts.py  core_monitor.py  fixtures_draft.py  scan.py  scan_verdict.py
tests/: conftest.py  test_accuracy.py  (+68 more)
(+223 files in other folders)
