[project]
name = "trading-dashboard"
version = "0.1.0"
description = "The trading dashboard that won't let you break your own rules."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "yfinance>=0.2",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
